# RSDKv5-Example-Mods

MaxControl/: CMakeLists.txt
MaxControl/MaxControl/: dllmain.c
UltrawideMania/UltrawideMania/: dllmain.c
